# llm_observation

./: README.md
uv-phoenix/: .env.sample  .gitignore  README.md  compose.yml  pyproject.toml
uv-phoenix/Docker/: Dockerfile
uv-phoenix/src/: llm_service.py  main.py  phoenix_config.py  tools.py
