[project]
name = "uv-phoenix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arize-phoenix>=8.2.1",
    "duckdb>=1.2.0",
    "ipykernel>=6.29.5",
    "openai>=1.64.0",
    "openinference-instrumentation-openai>=0.1.21",
    "phoenix>=0.9.1",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.7",
]
